--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "tw-animate-css": "^1.4.0"
   },
   "dependencies": {
-    "@astrojs/node": "^9.5.1",
     "@astrojs/sitemap": "^3.6.0",
+    "@astrojs/vercel": "^9.0.2",
     "astro": "^5.16.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
